// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CloseButton> can render without theme 1`] = `
<button
  className="CloseButton-sc-sqbalp-0"
/>
`;

exports[`<CloseButton> supports the as prop 1`] = `
<a
  className="CloseButton-sc-sqbalp-0"
/>
`;
